k8s/geek_time/test/senior/wp-ing.yaml
---
apiVersion: v1
kind: Namespace
metadata: 
  name: nginx-ingress

---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: wp-ink

spec:
  controller: nginx.org/ingress-controller

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-ing
  annotations:
    nginx.org/lb-request_method: round_robin

spec:
  ingressClassName: wp-ink

  rules:
  - host: wp.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wp-svc
            port:
              number: 80
